# ArcCode

./: .gitignore  Cargo.toml  README.md  plan.md
.github/workflows/: ci.yml  release.yml
crates/arccode-autonomous/src/: acceptance.rs  automerge.rs  checkpoint.rs  concurrency.rs  critic.rs  daemon.rs  dashboard.rs  escalation.rs  estimate.rs  eval.rs  feedback.rs  handoff.rs  intake.rs  interject.rs  ipc.rs  knowledge.rs  learning.rs  lib.rs  manager.rs  model.rs  notify.rs  orchestrator.rs  pipeline.rs  planner.rs  pr.rs  provider_support.rs  refine.rs  reporting.rs  role.rs  sandbox.rs  scheduler.rs  security.rs  severity.rs  skillpack.rs  store.rs  toolsynth.rs  voice.rs  watcher.rs  webhook.rs  worktree.rs
crates/arccode-cli/: Cargo.toml
crates/arccode-cli/src/: cli.rs  logging.rs  login.rs  main.rs  oauth.rs  runtime.rs
crates/arccode-cli/src/commands/: config.rs  discover.rs  headless.rs  login.rs  mod.rs  pilot.rs  pilot_watch_tui.rs  worker.rs
crates/arccode-config/: Cargo.toml
crates/arccode-config/src/: lib.rs  paths.rs
crates/arccode-core/: Cargo.toml
crates/arccode-core/src/: agent.rs  error.rs  lib.rs  message.rs  provider.rs  tool.rs
crates/arccode-learn/: Cargo.toml
crates/arccode-learn/src/: hooks.rs  lib.rs  memory.rs  proposal.rs  session_index.rs  stats.rs
crates/arccode-mcp/: Cargo.toml
crates/arccode-mcp/src/: lib.rs
crates/arccode-providers/: Cargo.toml
crates/arccode-providers/src/: anthropic.rs  chatgpt.rs  cohere.rs  gemini.rs  lib.rs  openai_compat.rs  probe.rs  watsonx.rs
crates/arccode-rag/: Cargo.toml
crates/arccode-rag/src/: lib.rs
crates/arccode-session/: Cargo.toml
crates/arccode-session/src/: lib.rs
crates/arccode-skills/src/: lib.rs
crates/arccode-tools/: Cargo.toml
crates/arccode-tools/src/: ctx.rs  lib.rs  registry.rs
crates/arccode-tools/src/builtin/: apply_patch.rs  edit_file.rs  forget_memory.rs  glob_tool.rs  grep_tool.rs  invoke_skill.rs  list_dir.rs  mod.rs  read_file.rs  read_session.rs  recall_memory.rs  recall_session.rs  run_shell.rs  save_memory.rs  write_file.rs
crates/arccode-tui/: Cargo.toml
crates/arccode-tui/src/: app.rs  attachments.rs  lib.rs
crates/arccode-tui/src/modal/: login.rs  model_picker.rs
crates/arccode-tui/src/widgets/: composer.rs  mod.rs  slash_suggest.rs  status.rs  transcript.rs
crates/wingman-autonomous/src/: automerge.rs  checkpoint.rs  daemon.rs  dashboard.rs  model.rs  notify.rs  orchestrator.rs  pipeline.rs  skillpack.rs  worker.rs  worktree.rs
crates/wingman-autonomous/src/prompts/: manager-planner.md
crates/wingman-browser/src/: lib.rs
crates/wingman-cli/: Cargo.toml
crates/wingman-cli/src/: cli.rs  login.rs  main.rs  runtime.rs
crates/wingman-cli/src/commands/: cost.rs  doctor.rs  explain.rs  golden.rs  knows.rs  memory.rs  mod.rs  pilot.rs  review_multi.rs  worker.rs
crates/wingman-cli/tests/: smoke.rs
crates/wingman-config/src/: lib.rs
crates/wingman-core/src/: agent.rs  checkpoint.rs  lib.rs  pricing.rs
crates/wingman-learn/src/: distill.rs
crates/wingman-lsp/src/: client.rs  lib.rs
crates/wingman-mcp/: Cargo.toml
crates/wingman-mcp/src/: lib.rs
crates/wingman-providers/src/: watsonx.rs
crates/wingman-rag/src/: embedder.rs
crates/wingman-session/: Cargo.toml
crates/wingman-session/src/: lib.rs
crates/wingman-tools/: Cargo.toml
crates/wingman-tools/src/: lib.rs  prefetch.rs  registry.rs
crates/wingman-tools/src/builtin/: ask_user.rs  command_tool.rs  glob_tool.rs  grep_tool.rs  lsp_tools.rs  mod.rs  read_file.rs
crates/wingman-tools/tests/: agent_loop_integration.rs
crates/wingman-tui/src/: app.rs
crates/wingman-tui/src/widgets/: slash_suggest.rs
docs/: AUTONOMOUS-MODE.md  PACKAGING.md  SDK.md  WATCH-UX-ENHANCEMENTS.md
packaging/homebrew/: wingman.rb
packaging/scoop/: wingman.json
scripts/: install.ps1  install.sh
website/: README.md  mdx-components.tsx  next.config.mjs  package-lock.json  package.json
website-soon/: .gitignore  README.md  package-lock.json  package.json
website-soon/app/: globals.css  layout.tsx  page.tsx
website-soon/components/: DottedWaves.tsx  Logo.tsx  NotifyForm.tsx  Reveal.tsx
website-soon/lib/: site.ts
website/app/: globals.css  layout.tsx  page.tsx
website/app/docs/: layout.tsx  page.mdx
website/app/docs/architecture/: page.mdx
website/app/docs/cli-reference/: page.mdx
website/app/docs/configuration/: page.mdx
website/app/docs/contributing/: page.mdx
website/app/docs/hooks/: page.mdx
website/app/docs/installation/: page.mdx
website/app/docs/learning-loop/: page.mdx
website/app/docs/permission-modes/: page.mdx
website/app/docs/pilot/: page.mdx
website/app/docs/pilot-providers/: page.mdx
website/app/docs/providers/: page.mdx
website/app/docs/quick-start/: page.mdx
website/app/docs/roadmap/: page.mdx
website/app/docs/slash-commands/: page.mdx
website/app/docs/tools/: page.mdx
website/components/: CodeBlock.tsx  Comparison.tsx  CopyButton.tsx  DocsPager.tsx  DocsSidebar.tsx  DottedWaves.tsx  FeatureGrid.tsx  Footer.tsx  Hero.tsx  HeroTerminal.tsx  InstallSection.tsx  LearningLoop.tsx  Logo.tsx  Nav.tsx  PilotTiers.tsx  ProviderShowcase.tsx  Section.tsx  TableOfContents.tsx  TerminalWindow.tsx  ToolsSection.tsx  icons.tsx
website/lib/: nav.ts  site.ts
